--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,6 +9,7 @@
         <%= form.text_field :username %>
       </div>
     </div>
+
     <div class="form-field">
       <div class="field-label">
         <%= form.label :password %>
@@ -17,6 +18,16 @@
         <%= form.text_field :password %>
       </div>
     </div>
+
+    <div class="form-field">
+      <div class="field-label">
+        <%= form.label :email %>
+      </div>
+      <div class="field-input">
+        <%= form.text_field :email %>
+      </div>
+    </div>
+
     <input type='submit' class='form-submit' id='user-signup-submit'>
   <% end %>
 </div>
