--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,6 +7,10 @@
       </div>
       <div class="field-input">
         <%= form.text_field :username %>
+        <div class='alert'>
+          <% @user.errors.full_messages_for(:username).each do |message| %>
+            <div><%= message %></div>
+          <% end %>
       </div>
     </div>
 
