--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,5 @@
 <p>Welcome to Chitter</p>
+<p>Welcome user1</p>
 <p id='notice'><%= notice %></p>
-<a href='/signup' name=sign-up>Sign-up</a>
+<a href='/signup' name='sign-up'>Sign-up</a>
+<a href='/login' name='log-in'>Log-In</a>
