--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,8 @@
+<% if current_user %>
+<p>Welcome <%= current_user.username %></p>
+<% else %>
 <p>Welcome to Chitter</p>
-<p>Welcome user1</p>
+<% end %>
 <p id='notice'><%= notice %></p>
 <a href='/signup' name='sign-up'>Sign-up</a>
 <a href='/login' name='log-in'>Log-In</a>
