log out feature implemented

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,3 +6,4 @@
 <p id='notice'><%= notice %></p>
 <a href='/signup' name='sign-up'>Sign-up</a>
 <a href='/login' name='log-in'>Log-In</a>
+<a href='/logout' name='log-out'>Log-Out</a>
