--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,3 +7,7 @@
 <a href='/signup' name='sign-up'>Sign-up</a>
 <a href='/login' name='log-in'>Log-In</a>
 <a href='/logout' name='log-out'>Log-Out</a>
+<% if current_user %>
+<a href='/posts/new' name='new_post'>New Post</a>
+<% end %>
+<p>Hello World!</p>
