--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -6,6 +6,7 @@
   <div class='field-input'>
   <%= form.text_field :body %>
   </div>
+  <%= form.hidden_field :user_id, :value => current_user.id if current_user %>
   <input type="submit" name='post-submit' class="form-submit">
 </div>
 <% end %>
