Posts now display username and datestamp

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,4 +13,6 @@
 </br>
 <% @posts.each do |post| %>
 <p><%= post.body %><p>
+<p>Posted at:<%= post.created_at %>
+<p>User: <%=username_of_poster(post)%>    
 <% end %>
