--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,15 @@
+<p id='notice'><%= notice %></p>
+</br>
 <% if current_user %>
   <p>Welcome <%= current_user.username %></p>
+  <a href='/posts/new' name='new_post'>New Post</a>
+  <a href='/logout' name='log-out'>Log-Out</a>
 <% else %>
   <p>Welcome to Chitter</p>
+  <a href='/signup' name='sign-up'>Sign-up</a>
+  <a href='/login' name='log-in'>Log-In</a>
 <% end %>
 <p id='notice'><%= notice %></p>
-<a href='/signup' name='sign-up'>Sign-up</a>
-<a href='/login' name='log-in'>Log-In</a>
-<a href='/logout' name='log-out'>Log-Out</a>
-<% if current_user %>
-  <a href='/posts/new' name='new_post'>New Post</a>
-<% end %>
 </br>
 <div class="container text-center">
   <% @posts.each do |post| %>
